--- a/front/index.html
+++ b/front/index.html
@@ -26,24 +26,28 @@
               <h3 class="biao">发布新的</h3>
               <div class="pai">
                <div>
-                  <a href=""
-                  <img src="" />
-                  <p>文章</p></a>
+                  <a href="">
+                    <img src="img/fa1.jpg" width="50%" />
+                    <p>文章</p>
+                  </a>
                 </div>
                 <div>
-                  <a href=""
-                  <img src="" />
-                  <p>文章</p></a>
+                  <a href="">
+                    <img src="img/fa2.png" width="50%" />
+                    <p>图片</p>
+                  </a>
                 </div>
                 <div>
-                  <a href=""
-                  <img src="" />
-                  <p>文章</p></a>
+                  <a href="" >
+                    <img src="img/fa1.jpg" width="50%" />
+                    <p>音乐</p>
+                  </a>
                 </div>
                 <div>
-                  <a href=""
-                  <img src="" />
-                  <p>文章</p></a>
+                  <a href="">
+                    <img src="img/fa2.png" width="50%" />
+                    <p>动态</p>
+                  </a>
                 </div>
 
               </div>
