--- a/front/find.html
+++ b/front/find.html
@@ -100,7 +100,7 @@
 				      </a>
 				    </li>
 				  </ul>
-				  <div class="list-block-label">List block label text goes here</div>
+				  <!-- <div class="list-block-label">List block label text goes here</div> -->
 				</div>
 	        </div>
         </div>
@@ -118,14 +118,6 @@
               <a href="javascript:;" class="tab-link open-about click_pop">
                   <i class="icon fas fa-plus-square fa-2x" style="color:Tomato"></i>  
               </a>
-              <!-- About Popup -->
-              <div class="popup popup-about">
-                <div class="content-block">
-                  <p>About</p>
-                  <p><a href="#" class="close-popup">Close popup</a></p>
-                  <p>Lorem ipsum dolor ...</p>
-                </div>
-              </div><!--弹出框end-->
               <a href="community.html" class="tab-link">
                   <i class="icon fas fa-bars fa-lg"></i>
                   <span class="tabbar-label">社区</span>
@@ -138,17 +130,17 @@
         </div><!-- toolbar end -->
        </div>
      </div>
-	   <script type="text/javascript">
-	      $(function(){
-	            $(".click_pop").click(function(){
-	                $(".pop").show()
-	                // $(".yaoqing").show()
-	            })
-	            $(".pop").click(function(){
-	                $(".pop").hide()
-	                // $(".tishi").show()
-	            })
-	        })
+    <script type="text/javascript">
+      $(function(){
+            $(".click_pop").click(function(){
+                $(".pop").show()
+                // $(".yaoqing").show()
+            })
+            $(".pop").click(function(){
+                $(".pop").hide()
+                // $(".tishi").show()
+            })
+        })
     </script>
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
