--- a/front/index.html
+++ b/front/index.html
@@ -128,30 +128,22 @@
         <!-- Bottom Toolbar-->
         <div class="toolbar tabbar tabbar-labels">
           <div class="toolbar-inner">
-              <a href="#tab1" class="tab-link active">
+              <a href="#" class="tab-link active">
                   <i class="icon fas fa-home fa-lg" style="color:Tomato"></i>
                   <span class="tabbar-label redColor">首页</span>
               </a>
-              <a href="#tab2" class="tab-link">
+              <a href="find.html" class="tab-link">
                   <i class="icon far fa-compass fa-lg"></i>
                   <span class="tabbar-label">发现</span>
               </a>
               <a href="javascript:;" class="tab-link open-about click_pop">
                   <i class="icon fas fa-plus-square fa-2x" style="color:Tomato"></i>  
               </a>
-              <!-- About Popup -->
-              <div class="popup popup-about">
-                <div class="content-block">
-                  <p>About</p>
-                  <p><a href="#" class="close-popup">Close popup</a></p>
-                  <p>Lorem ipsum dolor ...</p>
-                </div>
-              </div>
-              <a href="#tab4" class="tab-link">
+              <a href="community.html" class="tab-link">
                   <i class="icon fas fa-bars fa-lg"></i>
-                  <span class="tabbar-label">发现</span>
+                  <span class="tabbar-label">社区</span>
               </a>
-              <a href="#tab5" class="tab-link">
+              <a href="my.html" class="tab-link">
                   <i class="icon fas fa-user fa-lg"></i>
                   <span class="tabbar-label">我的</span>
               </a>
@@ -160,8 +152,6 @@
       </div>
     </div>
     <script type="text/javascript">
-    
-
       $(function(){
             $(".click_pop").click(function(){
                 $(".pop").show()
@@ -176,10 +166,6 @@
             //     $(".yaoqing").hide();
             //     $(".tishi").hide();
             // })
-
-
-
-
         })
     </script>
     <!-- Path to Framework7 Library JS-->
