--- a/front/community.html
+++ b/front/community.html
@@ -186,15 +186,15 @@
                   <span class="tabbar-label">首页</span>
               </a>
               <a href="find.html" class="external tab-link">
-                  <i class="icon far fa-compass fa-lg" style="color:Tomato"></i>
-                  <span class="tabbar-label redColor">发现</span>
+                  <i class="icon far fa-compass fa-lg"></i>
+                  <span class="tabbar-label">发现</span>
               </a>
               <a href="javascript:;" class="tab-link open-about click_pop">
                   <i class="icon fas fa-plus-square fa-2x" style="color:Tomato"></i>  
               </a>
               <a href="community.html" class="external tab-link">
-                  <i class="icon fas fa-bars fa-lg"></i>
-                  <span class="tabbar-label">社区</span>
+                  <i class="icon fas fa-bars fa-lg" style="color:Tomato"></i>
+                  <span class="tabbar-label redColor">社区</span>
               </a>
               <a href="my.html" class="external tab-link">
                   <i class="icon fas fa-user fa-lg"></i>
