--- a/front/index.html
+++ b/front/index.html
@@ -26,7 +26,7 @@
               <h3 class="biao">发布新的</h3>
               <div class="pai">
                <div>
-                  <a href="">
+                  <a href="fawen.html">
                     <img src="img/fa1.jpg" width="50%" />
                     <p>文章</p>
                   </a>
