--- a/front/my.html
+++ b/front/my.html
@@ -72,7 +72,188 @@
         </div>
         <div class="pages navbar-through toolbar-through whiteBGColor">
 	        <div class="page-content">
-	        	    
+	        	<!-- <div class="card">            
+              <div class="card-content">
+                <div class="list-block media-list">
+                  <ul>
+                    <li class="item-content row">
+                    <div class="col-80">
+                        <div class="item-media">
+                          <img src="img/2.jpg" width="80" height="80" style=" border-radius:50%">
+                        </div>
+                        <div class="item-inner">
+                          <div class="item-title-row">
+                            <div class="item-title">用户名</div>
+                          </div>
+                          <div class="item-subtitle grayColor font11">
+                            <p>个人简介：暂无简介</p>
+                          </div>
+                        </div>
+                    </div> 
+                    <div class="col-20">
+                      <a href=""><i class="fas fa-angle-right "></i></a>
+                    </div>
+                      
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div> --> 
+            <!-- <div class="card"> -->
+              <!-- <div class="card-content"> -->
+                <div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px">
+                  <div class="col-5"></div>
+                  <div class="col-33">
+                    <img src="img/2.jpg" width="100%" height="80" style="border-radius:50%" id="userImg">
+                  </div>
+                  <div class="col-50">
+                     <div class="item-title-row">
+                        <!--item-title有黑体字的作用-->
+                        <div class="item-title font18">用户名</div>
+                      </div>
+                      <div class="item-subtitle grayColor font11">
+                        <p>个人简介：暂无简介</p>
+                      </div>
+                  </div>
+                  <div class="col-5" style="padding-top:6%">
+                    <a href="" class="grayColor"><i class="fas fa-angle-right fa-2x"></i></a>
+                  </div>
+                  <div class="col-10"></div>
+                </div>
+                <div class="row" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;padding:1% 0;">
+                  <div class="col-33">
+                    <a href="#" class="blackColor">
+                      <h3 style="text-align:center;">
+                        8
+                      </h3>
+                      <h3 style="text-align:center;">
+                        发布
+                      </h3>
+                    </a>
+                  </div>
+                  <div class="col-33">
+                    <a href="#" class="blackColor">
+                      <h3 style="text-align:center;">
+                        8
+                      </h3>
+                      <h3 style="text-align:center;">
+                        关注
+                      </h3>
+                    </a>
+                  </div>
+                  <div class="col-33">
+                    <a href="#" class="blackColor">
+                      <h3 style="text-align:center;">
+                        8
+                      </h3>
+                      <h3 style="text-align:center;">
+                        粉丝
+                      </h3>
+                    </a>
+                  </div>
+                </div>
+                <!-- 列表1 -->
+                <div class="list-block">
+                  <ul>
+                    <li>
+                      <a href="#" class="item-link item-content">
+                        <!-- <div class="item-media"><i class="icon icon-f7"></i></div> -->
+                        <div class="item-inner">
+                          <div class="item-title">我的消息</div>
+                          <!-- <div class="item-after">Label</div> -->
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <!-- 列表2 -->
+                <div class="list-block">
+                  <ul>
+                    <li>
+                      <a href="#" class="item-link item-content">
+                        <!-- <div class="item-media"><i class="icon icon-f7"></i></div> -->
+                        <div class="item-inner">
+                          <div class="item-title">我的收藏</div>
+                          <!-- <div class="item-after">Label</div> -->
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="item-link item-content">
+                        <!-- <div class="item-media"><i class="icon icon-f7"></i></div> -->
+                        <div class="item-inner">
+                          <div class="item-title">我的缓存</div>
+                          <!-- <div class="item-after"><span class="badge">5</span></div> -->
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="item-link item-content">
+                        <!-- <div class="item-media"><i class="icon icon-f7"></i></div> -->
+                        <div class="item-inner">
+                          <div class="item-title">我的订阅</div>
+                          <!-- <div class="item-after">Another label</div> -->
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                  <!-- <div class="list-block-label">List block label text goes here</div> -->
+                </div>
+                <!-- 列表3 -->
+                <div class="list-block">
+                  <ul>
+                    <li>
+                      <a href="#" class="item-link item-content">
+                        <!-- <div class="item-media"><i class="icon icon-f7"></i></div> -->
+                        <div class="item-inner">
+                          <div class="item-title">定时关闭</div>
+                          <!-- <div class="item-after">Label</div> -->
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="item-link item-content">
+                        <!-- <div class="item-media"><i class="icon icon-f7"></i></div> -->
+                        <div class="item-inner">
+                          <div class="item-title">意见反馈</div>
+                          <!-- <div class="item-after">Label</div> -->
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="item-link item-content">
+                        <!-- <div class="item-media"><i class="icon icon-f7"></i></div> -->
+                        <div class="item-inner">
+                          <div class="item-title">账号绑定</div>
+                          <!-- <div class="item-after">Label</div> -->
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <!-- 列表end -->
+
+                <!-- <div class="list-block media-list">
+                  <ul>
+                    <li>
+                      <a href="#" class="item-link item-content">
+                        <div class="item-media">
+                          <img src="img/2.jpg" width="80" height="80" style=" border-radius:50%">
+                        </div>
+                        <div class="item-inner">
+                          <div class="item-title-row">
+                            <div class="item-title">用户名</div>
+                          </div>
+                          <div class="item-subtitle grayColor font11">
+                            <p>个人简介：暂无简介</p>
+                          </div>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div> -->
+              <!-- </div> -->
+            <!-- </div> -->
 	        </div>
 	    </div>
 
@@ -119,5 +300,12 @@
     <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
     <script type="text/javascript" src="js/framework7.min.js"></script>
     <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        //实现用户头像正方形
+        var imgWidth = $("#userImg").width();
+        $("#userImg").height(imgWidth);
+      })
+    </script>
 </body>
 </html>
