音乐播放页

--- a/front/community.html
+++ b/front/community.html
@@ -77,7 +77,7 @@
 		          </div><!-- 可滑动的选项卡 end-->
 		        </div>
 		        <div class="right">
-	              <a href="#" style="color:#959595"><i class="fas fa-music"></i></a>
+	              <a href="musicPlay.html" style="color:#959595"><i class="fas fa-music"></i></a>
 	            </div>
 		      </div>
 		    </div>
