--- a/front/find.html
+++ b/front/find.html
@@ -64,7 +64,7 @@
             </div>
             <div class="center sliding">发现</div>
             <div class="right">
-              <a href="#" class="grayColor"><i class="fas fa-music"></i></a>
+              <a href="musicPlay.html" class="grayColor"><i class="fas fa-music"></i></a>
             </div>
           </div>
         </div>
