--- a/front/my.html
+++ b/front/my.html
@@ -66,7 +66,7 @@
           	</div>
             <div class="center sliding">我的</div>
             <div class="right">
-              <a href="#" class="grayColor"><i class="fas fa-music"></i></a>
+              <a href="musicPlay.html" class="grayColor"><i class="fas fa-music"></i></a>
             </div>
           </div>
         </div>
