发现页添加音乐列表页链接

--- a/front/find.html
+++ b/front/find.html
@@ -73,7 +73,7 @@
 	        	<div class="list-block">
 				  <ul>
 				    <li >
-				      <a href="#" class="item-link item-content">
+				      <a href="musicList.html" class="item-link item-content">
 				        <div class="item-media"><i class="icon fas fa-music fa-lg" style="color:Tomato"></i></div>
 				        <div class="item-inner" style="height:50px;padding-left:3%;">
 				          <div class="item-title font18">音乐</div>
