--- a/front/index.html
+++ b/front/index.html
@@ -38,7 +38,7 @@
                   </a>
                 </div>
                 <div>
-                  <a href="" >
+                  <a href="musicPublish.html" >
                     <img src="img/fa1.jpg" width="50%" />
                     <p>音乐</p>
                   </a>
