--- a/front/musicPublish.html
+++ b/front/musicPublish.html
@@ -43,7 +43,7 @@
 				      <div class="item-content">
 				        <div class="item-inner">
 				          <div class="item-input">
-				            <textarea name="message" style="height:200px">快说点什么吧~</textarea>
+				            <textarea name="message" style="height:200px" placeholder="快说点什么吧，恩~音乐主题是什么呢"></textarea>
 				          </div>
 				        </div>
 				      </div>
