--- a/front/index.html
+++ b/front/index.html
@@ -44,7 +44,7 @@
                   </a>
                 </div>
                 <div>
-                  <a href="">
+                  <a href="communityPublish.html">
                     <img src="img/fa2.png" width="50%" />
                     <p>动态</p>
                   </a>
