--- a/front/my.html
+++ b/front/my.html
@@ -104,7 +104,7 @@
                 <div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px">
                   <div class="col-5"></div>
                   <div class="col-33">
-                    <img src="img/2.jpg" width="100%" height="80" style="border-radius:50%" id="userImg">
+                    <img src="img/2.jpg" width="100%" style="border-radius:50%" id="userImg">
                   </div>
                   <div class="col-50">
                      <div class="item-title-row">
