--- a/front/musicContent.html
+++ b/front/musicContent.html
@@ -35,7 +35,87 @@
         </div>
         <div class="pages navbar-through toolbar-through whiteBGColor">
 	        <div class="page-content">
-
+	        	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px">
+                  <div class="col-5"></div>
+                  <div class="col-20">
+                    <img src="img/2.jpg" width="90%" style="border-radius:50%" class="userImg">
+                  </div>
+                  <div class="col-50">
+                     <div class="item-title-row" style="padding-top:5%">
+						捕梦人的疯狂摇滚
+                      </div>
+                  </div>
+                  <div class="col-20" style="padding-top:2%">
+                    <a href="#" class="button followBtn">关注</a>
+                  </div>
+                  <div class="col-5"></div>
+                </div>
+                <!-- 标题图 -->
+                <div>
+                	<!-- banner图           -->
+            		<a href=""><img width="100%" src="img/1.jpg"/></a>
+                </div>
+                <!-- 正文 -->
+                <!-- Add ".content-block-title" to add block's title -->
+			    <div class="content-block-title">Content block title</div>
+			    <div class="content-block">
+			        <p>Donec et nulla auctor massa pharetra adipiscing ut sit amet sem. Suspendisse molestie velit vitae mattis tincidunt. Ut sit amet quam mollis, vulputate turpis vel, sagittis felis. </p>
+			    </div>
+			    <!-- 正文end -->
+			    <!-- 音乐列表 -->
+			    <div class="content-block-title">音乐</div>
+				<div class="list-block media-list">
+				  <ul>
+				    <li>
+					  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px;margin-top:1px">
+		                  <div class="col-5"></div>
+		                  <div class="col-20">
+		                    <img src="img/2.jpg" width="100%" class="userImg" style="padding-top:12%">
+		                  </div>
+		                  <div class="col-50">
+		                    <h3 style="padding-top:2%">致姓名</h3>
+		                    <p style="margin-top:2%">IU</p>
+		                  </div>
+		                  <div class="col-20" style="padding-top:5%">
+		                    <a href="musicContent.html" class="grayColor"><i class="fas fa-play-circle   fa-2x"></i></a>
+		                  </div>
+		                  <div class="col-5"></div>
+		                </div>
+		            </li>
+		            <li>
+					  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px;margin-top:1px">
+		                  <div class="col-5"></div>
+		                  <div class="col-20">
+		                    <img src="img/2.jpg" width="100%" class="userImg" style="padding-top:12%">
+		                  </div>
+		                  <div class="col-50">
+		                    <h3 style="padding-top:2%">致姓名</h3>
+		                    <p style="margin-top:2%">IU</p>
+		                  </div>
+		                  <div class="col-20" style="padding-top:5%">
+		                    <a href="musicContent.html" class="grayColor"><i class="fas fa-play-circle   fa-2x"></i></a>
+		                  </div>
+		                  <div class="col-5"></div>
+		                </div>
+		            </li>
+		            <li>
+					  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px;margin-top:1px">
+		                  <div class="col-5"></div>
+		                  <div class="col-20">
+		                    <img src="img/2.jpg" width="100%" class="userImg" style="padding-top:12%">
+		                  </div>
+		                  <div class="col-50">
+		                    <h3 style="padding-top:2%">致姓名</h3>
+		                    <p style="margin-top:2%">IU</p>
+		                  </div>
+		                  <div class="col-20" style="padding-top:5%">
+		                    <a href="musicContent.html" class="grayColor"><i class="fas fa-play-circle   fa-2x"></i></a>
+		                  </div>
+		                  <div class="col-5"></div>
+		                </div>
+		            </li>
+				  </ul>
+				</div>
 
 	        </div>
 	    </div>
@@ -47,5 +127,12 @@
     <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
     <script type="text/javascript" src="js/framework7.min.js"></script>
     <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+     <script type="text/javascript">
+      $(document).ready(function(){
+        //实现用户头像正方形
+        var imgWidth = $(".userImg").width();
+        $(".userImg").height(imgWidth);
+      })
+    </script>
 </body>
 </html>
