微调-发布动态页、音乐内容页、我的页

--- a/front/communityPublish.html
+++ b/front/communityPublish.html
@@ -28,7 +28,7 @@
           	<div class="left">
           		<a href="javascript:history.go(-1)" class="external grayColor"><i class="fas fa-angle-left "></i></a>
           	</div>
-            <div class="center sliding">发布音乐</div>
+            <div class="center sliding">发布动态</div>
             <div class="right">
             	<a href="#" style="color:Tomato">发布</a>
             </div>
