--- a/front/musicContent.html
+++ b/front/musicContent.html
@@ -63,7 +63,7 @@
 			    </div>
 			    <!-- 正文end -->
 			    <!-- 音乐列表 -->
-			    <div class="content-block-title">音乐</div>
+			    <div class="content-block-title">音乐（共3首）</div>
 				<div class="list-block media-list">
 				  <ul>
 				    <li>
