--- a/front/my.html
+++ b/front/my.html
@@ -260,7 +260,7 @@
         <!-- Bottom Toolbar-->
         <div class="toolbar tabbar tabbar-labels">
           <div class="toolbar-inner">
-              <a href="#" class="tab-link">
+              <a href="index.html" class="tab-link">
                   <i class="icon fas fa-home fa-lg"></i>
                   <span class="tabbar-label">首页</span>
               </a>
