--- a/front/index.html
+++ b/front/index.html
@@ -20,7 +20,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="theme-gray">
      <!-- 遮罩层 -->
             <div class="pop">
               <h3 class="biao">发布新的</h3>
@@ -64,11 +64,15 @@
           <div class="navbar-inner">
             <!-- We have home navbar without left link-->
             <div class="left">
-              <a href="#" class="grayColor"><i class="fas fa-search"></i></a>
+              <a href="#" id="autocomplete-standalone-popup" class="grayColor autocomplete-opener">
+                <i class="fas fa-search">
+                  <div class="item-after"></div>
+                </i>
+              </a>
             </div>
             <div class="center sliding">首页</div>
             <div class="right">
-              <a href="musicPlay.html" class="grayColor"><i class="fas fa-music"></i></a>
+              <a href="musicPlay.html" class="external grayColor"><i class="fas fa-music"></i></a>
             </div>
           </div>
         </div>
@@ -172,6 +176,34 @@
     <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
     <script type="text/javascript" src="js/framework7.min.js"></script>
     <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
-    
+    <script>
+      // 搜索弹出搜索框
+      var myApp = new Framework7();            
+      var $$ = Dom7;
+      var autocompleteStandalonePopup = myApp.autocomplete({
+        openIn: 'popup', //open in popup
+        opener: $$('#autocomplete-standalone-popup'), //link that opens autocomplete
+        backOnSelect: true, //go back after we select something
+        source: function (autocomplete, query, render) {
+            var results = [];
+            if (query.length === 0) {
+                render(results);
+                return;
+            }
+            // Find matched items
+            for (var i = 0; i < fruits.length; i++) {
+                if (fruits[i].toLowerCase().indexOf(query.toLowerCase()) >= 0) results.push(fruits[i]);
+            }
+            // Render items by passing array with result items
+            render(results);
+        },
+        onChange: function (autocomplete, value) {
+            // Add item text value to item-after
+            $$('#autocomplete-standalone-popup').find('.item-after').text(value[0]);
+            // Add item value to input value
+            $$('#autocomplete-standalone-popup').find('input').val(value[0]);
+        }
+      });
+    </script>
   </body>
 </html>
