--- a/front/index.html
+++ b/front/index.html
@@ -136,18 +136,18 @@
                   <i class="icon fas fa-home fa-lg" style="color:Tomato"></i>
                   <span class="tabbar-label redColor">首页</span>
               </a>
-              <a href="find.html" class="tab-link">
+              <a href="find.html" class="external tab-link">
                   <i class="icon far fa-compass fa-lg"></i>
                   <span class="tabbar-label">发现</span>
               </a>
               <a href="javascript:;" class="tab-link open-about click_pop">
                   <i class="icon fas fa-plus-square fa-2x" style="color:Tomato"></i>  
               </a>
-              <a href="community.html" class="tab-link">
+              <a href="community.html" class="external tab-link">
                   <i class="icon fas fa-bars fa-lg"></i>
                   <span class="tabbar-label">社区</span>
               </a>
-              <a href="my.html" class="tab-link">
+              <a href="my.html" class="external tab-link">
                   <i class="icon fas fa-user fa-lg"></i>
                   <span class="tabbar-label">我的</span>
               </a>
