完善音乐内容页

--- a/front/musicContent.html
+++ b/front/musicContent.html
@@ -115,11 +115,130 @@
 		                </div>
 		            </li>
 				  </ul>
-				</div>
-
+				</div><!-- 音乐列表 end-->
+				<!-- 点赞收藏区 -->
+				<div class="row" style="border-bottom:solid thin #E0E0E0;padding-bottom:6%">
+					<div class="col-5"></div>
+					<div class="col-20 grayColor">02-08</div>
+					<div class="col-35"></div>
+					<div class="col-10">
+						<i class="far fa-heart fa-lg"></i>
+					</div>
+					<div class="col-5"></div>
+					<div class="col-20">
+						<i class="far fa-thumbs-up fa-lg"></i>
+						<span>666</span>
+					</div>
+					<div class="col-5"></div>
+				</div><!-- 点赞收藏区 end -->	
+				<!-- 评论列表 -->
+				<ul>
+					<li class="row">
+						<div class="col-5"></div>
+						<div class="col-90" style="border-bottom:solid thin #E0E0E0;">
+							<!-- 头像用户名 -->
+							<div class="row" style="padding-top:6%">
+								<div class="col-20">
+									<img src="img/2.jpg" width="100%" style="border-radius:50%" class="userImg"/>
+								</div>
+								<div class="col-50 font16" style="padding-top:2%">MMM</div>
+								<div class="col-20"></div>
+							</div><!-- 头像用户名 end -->
+							<!-- 评论内容区 -->
+							<div class="row">
+								<p class="font16" style="text-indent:2em;">歌曲很好听！</p>
+							</div><!-- 评论内容区 end-->
+							<!-- 点赞评论区 -->
+							<div class="row" style="padding-bottom:5%">
+								<div class="col-5"></div>
+								<div class="col-20 grayColor">02-08</div>
+								<div class="col-40"></div>
+								<div class="col-20">
+									<i class="far fa-comment fa-lg"></i>
+									<span>0</span>
+								</div>
+								<div class="col-20">
+									<i class="far fa-thumbs-up fa-lg"></i>
+									<span>6</span>
+								</div>
+							</div>
+						</div>
+						<div class="col-5"></div>
+					</li>
+					<li class="row">
+						<div class="col-5"></div>
+						<div class="col-90" style="border-bottom:solid thin #E0E0E0;">
+							<!-- 头像用户名 -->
+							<div class="row" style="padding-top:6%">
+								<div class="col-20">
+									<img src="img/2.jpg" width="100%" style="border-radius:50%" class="userImg"/>
+								</div>
+								<div class="col-50 font16" style="padding-top:2%">名字名字</div>
+								<div class="col-20"></div>
+							</div><!-- 头像用户名 end -->
+							<!-- 评论内容区 -->
+							<div class="row">
+								<p class="font16" style="text-indent:2em;">刚听过的现场，歌曲很好听！</p>
+							</div><!-- 评论内容区 end-->
+							<!-- 点赞评论区 -->
+							<div class="row" style="padding-bottom:5%">
+								<div class="col-5"></div>
+								<div class="col-20 grayColor">02-08</div>
+								<div class="col-40"></div>
+								<div class="col-20">
+									<i class="far fa-comment fa-lg"></i>
+									<span>0</span>
+								</div>
+								<div class="col-20">
+									<i class="far fa-thumbs-up fa-lg"></i>
+									<span>6</span>
+								</div>
+							</div>
+						</div>
+						<div class="col-5"></div>
+					</li>
+					<li class="row">
+						<div class="col-5"></div>
+						<div class="col-90" style="border-bottom:solid thin #E0E0E0;">
+							<!-- 头像用户名 -->
+							<div class="row" style="padding-top:6%">
+								<div class="col-20">
+									<img src="img/2.jpg" width="100%" style="border-radius:50%" class="userImg"/>
+								</div>
+								<div class="col-50 font16" style="padding-top:2%">紫馨</div>
+								<div class="col-20"></div>
+							</div><!-- 头像用户名 end -->
+							<!-- 评论内容区 -->
+							<div class="row">
+								<p class="font16" style="text-indent:2em;">太喜欢了，，，，，，，，，，，喜欢喜欢，歌曲很好听！</p>
+							</div><!-- 评论内容区 end-->
+							<!-- 点赞评论区 -->
+							<div class="row" style="padding-bottom:5%">
+								<div class="col-5"></div>
+								<div class="col-20 grayColor">02-08</div>
+								<div class="col-40"></div>
+								<div class="col-20">
+									<i class="far fa-comment fa-lg"></i>
+									<span>0</span>
+								</div>
+								<div class="col-20">
+									<i class="far fa-thumbs-up fa-lg"></i>
+									<span>6</span>
+								</div>
+							</div>
+						</div>
+						<div class="col-5"></div>
+					</li>
+				</ul>
+				<!-- 评论列表 end-->
 	        </div>
 	    </div>
-
+	    <!-- 底部评论输入框-->
+        <div class="toolbar messagebar">
+		  <div class="toolbar-inner">
+		    <textarea placeholder="说点什么吧~"></textarea><a href="#" class="link redColor">发送</a>
+		  </div>
+		</div>   <!-- toolbar end -->
       </div>
     </div>
 
