--- a/front/musicList.html
+++ b/front/musicList.html
@@ -28,9 +28,7 @@
           		<a href="javascript:history.go(-1)" class="external grayColor"><i class="fas fa-angle-left "></i></a>
           	</div>
             <div class="center sliding">音乐列表</div>
-            <div class="right">
-            	
-            </div>
+            <div class="right"></div>
           </div>
         </div>
         <div class="pages navbar-through toolbar-through whiteBGColor">
