--- a/back/user.html
+++ b/back/user.html
@@ -34,16 +34,19 @@
                             用户名
                         </th>
                         <th>
-                           真实姓名
+                           e-mail
                         </th>
                         <th>
                             性别
                         </th>
                         <th>
-                            家庭住址
+                            出生日期
                         </th>
                         <th>
                             手机号
+                        </th>
+                        <th>
+                            个人简介
                         </th>
                         <th>
                             操作
@@ -62,16 +65,19 @@
                            一米阳光
                         </td>
                         <td>
-                            贾晓琳
+                             137@qq.com
                         </td>
                         <td>
-                           女
+                          女
                         </td>
                         <td>
-                           XXX小区2栋120
+                            1997年10月30日
                         </td>
                          <td>
-                           152XXXXXXX
+                            15426268888
+                        </td>
+                        <td>
+                            我最美
                         </td>
                         <td>  
                             <a href="editUser.html"><button type="button" class="btn btn-link ">
@@ -89,28 +95,31 @@
                             <label><input type="checkbox"/></label>    
                         </td>
                         <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle" width="30%"/>
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                         <td>
                            一米阳光
                         </td>
                         <td>
-                            贾晓琳
+                             137@qq.com
                         </td>
                         <td>
-                           女
+                          女
                         </td>
                         <td>
-                           XXX小区2栋120
+                            1997年10月30日
                         </td>
                          <td>
-                           152XXXXXXX
+                            15426268888
+                        </td>
+                        <td>
+                            我最美
                         </td>
                         <td>  
                             <a href="editUser.html"><button type="button" class="btn btn-link ">
                               <span class="glyphicon  glyphicon-edit"></span>
                               编辑      
-                            </button> 
+                            </button>
                             </a>
                             <button type="button" class="btn btn-link ">
                               <span class="glyphicon  glyphicon-trash"></span> 删除     
@@ -122,28 +131,31 @@
                             <label><input type="checkbox"/></label>    
                         </td>
                         <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle" width="30%"/>
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                         <td>
                            一米阳光
                         </td>
                         <td>
-                            贾晓琳
+                             137@qq.com
                         </td>
                         <td>
-                           女
+                          女
                         </td>
                         <td>
-                           XXX小区2栋120
+                            1997年10月30日
                         </td>
                          <td>
-                           152XXXXXXX
+                            15426268888
                         </td>
                         <td>
+                            我最美
+                        </td>
+                        <td>  
                             <a href="editUser.html"><button type="button" class="btn btn-link ">
                               <span class="glyphicon  glyphicon-edit"></span>
                               编辑      
-                            </button> 
+                            </button>
                             </a>
                             <button type="button" class="btn btn-link ">
                               <span class="glyphicon  glyphicon-trash"></span> 删除     
@@ -155,61 +167,67 @@
                             <label><input type="checkbox"/></label>    
                         </td>
                         <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle" width="30%"/>
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                         <td>
                            一米阳光
                         </td>
                         <td>
-                            贾晓琳
+                             137@qq.com
                         </td>
                         <td>
-                           女
+                          女
                         </td>
                         <td>
-                           XXX小区2栋120
+                            1997年10月30日
                         </td>
                          <td>
-                           152XXXXXXX
+                            15426268888
+                        </td>
+                        <td>
+                            我最美
                         </td>
                         <td>  
                             <a href="editUser.html"><button type="button" class="btn btn-link ">
                               <span class="glyphicon  glyphicon-edit"></span>
                               编辑      
-                            </button> 
+                            </button>
                             </a>
                             <button type="button" class="btn btn-link ">
                               <span class="glyphicon  glyphicon-trash"></span> 删除     
                             </button>
                         </td>
                     </tr>
-                    <tr>
+                   <tr>
                         <td>
                             <label><input type="checkbox"/></label>    
                         </td>
                         <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle"width="30%" />
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                         <td>
                            一米阳光
                         </td>
                         <td>
-                            贾晓琳
+                             137@qq.com
                         </td>
                         <td>
-                           女
+                          女
                         </td>
                         <td>
-                           XXX小区2栋120
+                            1997年10月30日
                         </td>
-                         <td>
-                           152XXXXXXX
+                        <td>
+                            15426268888
+                        </td>
+                        <td>
+                            我最美
                         </td>
                         <td>  
                             <a href="editUser.html"><button type="button" class="btn btn-link ">
                               <span class="glyphicon  glyphicon-edit"></span>
                               编辑      
-                            </button> 
+                            </button>
                             </a>
                             <button type="button" class="btn btn-link ">
                               <span class="glyphicon  glyphicon-trash"></span> 删除     
