--- a/back/articleAdminis.html
+++ b/back/articleAdminis.html
@@ -36,10 +36,13 @@
                     <tr>
                         <th></th>
                         <th>
-                             标题
+                            标题
                         </th>
                         <th>
-                            调用次数
+                            作者
+                        </th>
+                         <th>
+                            封面图
                         </th>
                         <th>
                             操作
@@ -57,6 +60,9 @@
                                     <td>
                                         111123
                                     </td> 
+                                     <td style="text-align:center">
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                        </td>
                                     <td>  
                                         <button type="button" class="btn btn-link ">
                                           <span class="glyphicon glyphicon-eye-open"></span> 审查      
@@ -76,6 +82,9 @@
                                     <td>
                                         234
                                     </td>
+                                     <td style="text-align:center">
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                        </td>
                                     <td>
                                         <button type="button" class="btn btn-link ">
                                           <span class="glyphicon glyphicon-eye-open"></span> 审查     
@@ -95,6 +104,9 @@
                                     <td>
                                         66666
                                     </td>
+                                     <td style="text-align:center">
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                        </td>
                                     <td>
                                         <button type="button" class="btn btn-link ">
                                           <span class="glyphicon glyphicon-eye-open"></span> 审查     
@@ -114,6 +126,9 @@
                                     <td>
                                         888
                                     </td>
+                                     <td style="text-align:center">
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                        </td>
                                     <td>
                                         <button type="button" class="btn btn-link ">
                                           <span class="glyphicon glyphicon-eye-open"></span> 审查     
