--- a/back/editUser.html
+++ b/back/editUser.html
@@ -50,9 +50,9 @@
                                         </div>
                                     </div>
                                      <div class="form-group">
-                                         <label for="inputtext2" class="col-sm-2 control-label">真实姓名</label>
+                                         <label for="inputtext2" class="col-sm-2 control-label">e-mail</label>
                                         <div class="col-sm-10">
-                                            <input type="text" class="form-control" id="inputtext2"value="贾晓琳" />
+                                            <input type="text" class="form-control" id="inputtext2"value="1344@qq.com" />
                                         </div>
                                     </div>
                                      <div class="form-group">
@@ -62,9 +62,9 @@
                                         </div>
                                     </div>
                                      <div class="form-group">
-                                         <label for="inputtextarea" class="col-sm-2 control-label">家庭住址</label>
+                                         <label for="inputtextarea" class="col-sm-2 control-label">个人简介</label>
                                         <div class="col-sm-10">
-                                            <textarea class="form-control" id="inputtextarea"  >XXXX小区2栋120</textarea>
+                                            <textarea class="form-control" id="inputtextarea"  ></textarea>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -79,6 +79,7 @@
                                              <a href="user.html"><button type="button" class="btn btn-info ">保存</button></a>
                                         </div>
                                     </div>
+
                                 </form>
                             </div>
                         </div>
