WYW-微调返回键

--- a/front/mePublished.html
+++ b/front/mePublished.html
@@ -24,7 +24,7 @@
         <div class="navbar whiteBGColor">
           <div class="navbar-inner">
           	<div class="left">
-          		<a href="javascript:history.go(-1)" class="external grayColor"><i class="fas fa-angle-left "></i><span> 我</span></a>
+          		<a href="javascript:history.go(-1)" class="external blackColor"><i class="fas fa-angle-left fa-lg"></i><span> 我</span></a>
           	</div>
             <div class="center sliding">已发布</div>
             <div class="right">
