--- a/front/musicContent.html
+++ b/front/musicContent.html
@@ -25,7 +25,7 @@
         <div class="navbar whiteBGColor">
           <div class="navbar-inner">
           	<div class="left">
-          		<a href="javascript:history.go(-1)" class="external grayColor"><i class="fas fa-angle-left "></i></a>
+          		<a href="javascript:history.go(-1)" class="external grayColor"><i class="fas fa-arrow-left fa-lg"></i></a>
           	</div>
             <div class="center sliding">动态详情</div>
             <div class="right">
