--- a/front/communityPublish.html
+++ b/front/communityPublish.html
@@ -26,7 +26,7 @@
         <div class="navbar whiteBGColor">
           <div class="navbar-inner">
           	<div class="left">
-          		<a href="javascript:history.go(-1)" class="external grayColor"><i class="fas fa-angle-left "></i></a>
+          		<a href="javascript:history.go(-1)" class="external blackColor"><i class="fas fa-angle-left  fa-lg"></i></a>
           	</div>
             <div class="center sliding">发布动态</div>
             <div class="right">
