--- a/front/mePublished.html
+++ b/front/mePublished.html
@@ -34,12 +34,12 @@
         </div>
         <div class="pages navbar-through toolbar-through whiteBGColor">
 	        <div class="page-content">
-	        	<p class="font16 redColor" style="text-indent:2em;">2017年</p>
+	        	<p class="font18 redColor" style="text-indent:1em;">2017年</p>
 	        	<!-- Timeline -->
 				<div class="timeline" style="margin-top:2%">
 				  <!-- Timeline item -->
 				  <div class="timeline-item">
-				    <div class="timeline-item-date">11-12</div>
+				    <div class="timeline-item-date font16">11-12</div>
 				    <div class="timeline-item-divider"></div>
 				    <div class="timeline-item-content list-block media-list">
 				      <ul>
@@ -80,7 +80,7 @@
 				  </div>
 				  <!-- Timeline item with inner -->
 				  <div class="timeline-item">
-				    <div class="timeline-item-date">10-31</div>
+				    <div class="timeline-item-date font16">10-31</div>
 				    <div class="timeline-item-divider"></div>
 				    <div class="timeline-item-content list-block media-list">
 				      <ul>
@@ -121,7 +121,7 @@
 				  </div>
 				  <!-- Timeline item with special timeline elements -->
 				  <div class="timeline-item">
-				    <div class="timeline-item-date">9-21</div>
+				    <div class="timeline-item-date font16">9-21</div>
 				    <div class="timeline-item-divider"></div>
 				    <div class="timeline-item-content">
 				      <div class="timeline-item-time">12:33</div>
